# piecemealpl

./: README.md  README_uk.md  RESULTS.md  calc.fsx  measure.ps1
.github/workflows/: build.yml
createdir/c/: CMakeLists.txt  main.c
createdir/go/: go.mod  main.go
createdir/naot/: Program.cs
createdir/rust/src/: main.rs
createdir2/c/: CMakeLists.txt  main.c
createdir2/go/: go.mod  main.go
createdir2/naot/: Program.cs
createdir2/rust/: Cargo.toml
createdir2/rust/src/: main.rs
csv_write/c/: CMakeLists.txt  main.c
csv_write/go/: go.mod  main.go
csv_write/naot/: Program.cs
csv_write/rust/: Cargo.toml
csv_write/rust/src/: main.rs
json_write/c/: CMakeLists.txt  main.c
json_write/go/: go.mod  main.go
json_write/naot/: Program.cs  json_write.csproj
json_write/rust/: Cargo.toml
json_write/rust/src/: main.rs
parameterobjects/c/: CMakeLists.txt  main.c
parameterobjects/go/: go.mod  main.go
parameterobjects/naot/: Program.cs
parameterobjects/rust/: Cargo.toml
parameterobjects/rust/src/: basefun.rs  main.rs
parameterobjects_baseline/c/: CMakeLists.txt  main.c
parameterobjects_baseline/go/: go.mod  main.go
parameterobjects_baseline/naot/: Program.cs
parameterobjects_baseline/rust/: Cargo.toml
parameterobjects_baseline/rust/src/: basefun.rs  main.rs
randint/c/: CMakeLists.txt  main.c
randint/go/: go.mod  main.go
randint/naot/: Program.cs
randint/rust/: Cargo.toml
randint/rust/src/: main.rs
regex_match/c/: CMakeLists.txt  main.c  vcpkg.json
regex_match/go/: go.mod  main.go
regex_match/naot/: Program.cs
regex_match/rust/: Cargo.toml
regex_match/rust/src/: main.rs
sdl2/go/: go.mod
tcp_simple/c/: CMakeLists.txt  main.c
tcp_simple/go/: go.mod  main.go
tcp_simple/naot/: Program.cs
tcp_simple/rust/: Cargo.toml
tcp_simple/rust/src/: main.rs
writefile/c/: CMakeLists.txt  main.c
writefile/go/: go.mod  main.go
writefile/naot/: Program.cs
writefile/rust/: Cargo.toml
writefile/rust/src/: main.rs
